@@ -1,6 +1,11 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  09 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/livecdfs-update.sh:
+  We check for a plugdev group, add it if it doesn't exist, and make sure any
+  users specified by livecd/users is in the group.
+
   09 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/mips.py:
   Changing cobalt_n32 to use mipsel4_n32 as its inheritance point. Thanks to
   Stuart Longland <redhatter@gentoo.org> for pointing this change out.
